[package]
name = "rquickjs_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = "0.11.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
filetime = "0.2.26"
wasmtime = "42.0.1"
wasmtime-wasi = "42.0.1"

[dev-dependencies]
tiny_http = "0.12.0"
